--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -13,5 +13,7 @@ jobs:
         uses: action/setup-node@v2
         with:
           node-version: '18'
+      - name: Use local my-action
+        uses: ./.github/workflows/node.yml
       - run: npm install
       - run: npm run build --prefix client
