--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -15,6 +15,7 @@ jobs:
         uses: action/setup-node@v2
         with:
           node-version: '18'
+          repository: filipeule/nasa-project
       - name: Use local my-action
         uses: ./.github/workflows/node.yml
       - run: npm install
