--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -11,11 +11,13 @@ jobs:
       - uses: actions/checkout@v2
         with:
           repository: filipeule/nasa-project
+          ref: main
       - name: Use Node.js version 18
         uses: action/setup-node@v3
         with:
           node-version: '18'
           repository: filipeule/nasa-project
+          ref: main
       - name: Use local my-action
         uses: ./.github/workflows/node.yml
       - run: npm install
