--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -12,12 +12,14 @@ jobs:
         with:
           repository: filipeule/nasa-project
           ref: main
+          path: ./.github/workflows/node.yml
       - name: Use Node.js version 18
         uses: action/setup-node@v3
         with:
           node-version: '18'
           repository: filipeule/nasa-project
           ref: main
+          path: ./.github/workflows/node.yml
       - name: Use local my-action
         uses: ./.github/workflows/node.yml
       - run: npm install
